--- a/src/index.css
+++ b/src/index.css
@@ -198,7 +198,7 @@ body {
 .buttons {
   margin-top: 40px;
 }
-.edit-btn, .remove-btn {
+.edit-btn, .remove-btn, .save-btn {
   padding: 10px;
   width: 150px;
   font-size: 15px;
@@ -215,4 +215,8 @@ body {
   color: white;
   border: none;
 }
-
+.save-btn {
+  background-color:#127dc9;
+  color: white;
+  border: none;
+}
